[project]
name = "spectral-phasors-analysis"
version = "0.2.0"
description = "A Python application for spectral phasor analysis built with Panel and HoloViews. This tool allows you to explore spectral phasors through simulations (single/multi‑Gaussian) and analyze real experimental data via CSV spectra or TIFF hyperspectral stacks."
authors = [
  {name = "Davide Panzeri"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.2",
    "holoviews>=1.22.1",
    "hvplot>=0.12.2",
    "jupyter>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "panel>=1.8.7",
    "shapley>=1.0.2",
    "spatialpandas>=0.5.0",
    "tifffile>=2026.2.20",
    "watchfiles>=1.1.1",
    "xarray>=2026.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
